[fix]: ai ask window disappear, over 1 page display pagination, share screen ui overflow

--- a/styles/apps.module.scss
+++ b/styles/apps.module.scss
@@ -220,3 +220,11 @@
     padding: 8px 4px;
   }
 }
+
+.todo_export {
+  height: fit-content;
+  max-height: 60vh;
+  width: 100%;
+  overflow-y: scroll;
+  scrollbar-width: thin;
+}
